adding stories and things to do page

--- a/photos.html
+++ b/photos.html
@@ -88,7 +88,7 @@
               <li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
               <li><a href="travel.html" title="Travel">Travel</a></li>
               <li><a href="registry.html" title="Registry">Registry</a></li>
-              <li><a href="travelaccomodations.html" title="Accomodations">Things To Do</a></li>
+              <li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
               <li><a href="photos.html" title="Schedule">Photos</a></li>
             </ul>
           </div><!--/.nav-collapse -->
