--- a/thingstodo.html
+++ b/thingstodo.html
@@ -127,94 +127,71 @@
 	<div id="sectionwrap" class="top-edge-shadow topsection">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
-				<h1>Accomodations</h1><hr class="whitebackground">
+				<h1>Things To Do</h1><hr class="whitebackground">
 			</div>
 		</div>
 
 
 		<div class="container-fluid">
 
-
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<img class="imghotelcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						<h3>Food</h3>
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<h4>Old Post Office Pavilion</h4>
-					<h5>1100 Pennsylvania Ave NW <br />Washington, DC 20004</h5>
-					<h5>Location of the Reception and Farewell Brunch</h5>
+				<hr class="datedivider">
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						<h4>Test</h4>
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<a href="tel:8558786700" type="button" class="btn btn-calendar">855.878.6700</a>
-					<a href="https://gc.synxis.com/rez.aspx?Hotel=65834&amp;Chain=12157&amp;arrive=11/3/2017&amp;depart=11/5/2017&amp;adult=1&amp;child=0&amp;group=2944260" type="button" class="btn btn-calendar">Website</a>
-					<a href="https://goo.gl/maps/9pcMAGqPGiM2" type="button" class="btn btn-calendar">Google Maps</a>
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						<a href="https://goo.gl/maps/zpz1bqjahhJ2" type="button" class="btn btn-calendar">Google Maps</a>
+					</div>
+				</div> <br />
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						Test
+					</div><br />
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered"> <br />
-					We have a block of rooms reserved at The Old Post Office Pavilion/The Trump Hotel Washington D.C. starting at $350/night (plus tax). Reservations can be accessed via the website button above. Guests can also call 855-878-6700 to make reservations by referencing the Allie Williams and Matt Slocum wedding block. 
-				</div><br />
-			</div>
-
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<img class="imghotelcell imagedropshadow" src="assets/img/photos/marriott_320x320.jpg"/>
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						<h4>Test</h4>
+					</div>
 				</div>
+				
 			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<h4>JW Marriott Washington, DC</h4>
-					<h5>1331 Pennsylvania Ave NW <br /> Washington, DC 20004</h5>
+			
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						<h3>Must See</h3>
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<a href="tel:2023932000" type="button" class="btn btn-calendar">202.393.2000</a>
-					<a href="https://aws.passkey.com/event/48975576/owner/559/home" type="button" class="btn btn-calendar">Website</a>
-					<a href="https://goo.gl/maps/kKTfVRupxHP2" type="button" class="btn btn-calendar">Google Maps</a>
+				<hr class="datedivider">
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						<h4>Amtrack Union Station</h4>
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered"><br />
-					We have a block of rooms reserved at the JW Marriott for $209/night (available Thursday through Sunday). Rates available until October 13, 2017.  The hotel is located 0.3 miles from the Old Post Office Pavilion, where the wedding reception and Sunday brunch will take place and 0.4 mile from St. Patrick’s Church
-					To reserve, please click website button above to access our personalized booking page. Note: If you call the hotel for assistance, please reference the Williams/Slocum Wedding room block.
-
-				</div><br />
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<img class="imghotelcell imagedropshadow" src="assets/img/photos/hyatt_320x320.jpg"/>
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<h4>Grand Hyatt Washington</h4>
-					<h5>1000 H St NW <br /> Washington, DC 20001</h5>
+				<br />
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						Train information
+					</div><br />
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<a href="tel:2025821234" type="button" class="btn btn-calendar">202.582.1234</a>
-					<a href="https://aws.passkey.com/event/48987742/owner/544/home" type="button" class="btn btn-calendar">Website</a>
-					<a href="https://goo.gl/maps/HJKHyQ5C2Z92" type="button" class="btn btn-calendar">Google Maps</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered"><br />
-					We have a block of rooms reserved at the Grand Hyatt Washington for $145/night (availalbe Thursday through Sunday). Rates available until October 12, 2017.  The hotel is located 0.4 mile from the Old Post Office Pavilion, where the wedding reception and Sunday brunch will take place and 0.2 mile from St. Patrick’s Church.
-					To reserve, please click the website button above to access our personalized booking page.
-					Note: If you call the hotel for assistance, please reference the Williams/Slocum Wedding room block.
-
-				</div><br />
 			</div>
 		</div>
 
+		
 	</div>
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
