--- a/aboutus.html
+++ b/aboutus.html
@@ -22,9 +22,9 @@
 
 	<!-- Custom styles for this template -->
 	<link href="assets/css/main.css" rel="stylesheet">
-	
+
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-	
+
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -45,7 +45,7 @@
 		$('body').smoothScroll({
 			delegateSelector: 'ul.nav a'
 		});
-		
+
 		$('.navbar-collapse a').click(function(){
 			$(".navbar-collapse").collapse('hide');
 		});
@@ -88,7 +88,7 @@
   						<li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
   						<li><a href="travel.html" title="Travel">Travel</a></li>
   						<li><a href="registry.html" title="Registry">Registry</a></li>
-  						<li><a href="travelaccomodations.html" title="Accomodations">Things To Do</a></li>
+  						<li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
   						<li><a href="photos.html" title="Schedule">Photos</a></li>
   					</ul>
   				</div><!--/.nav-collapse -->
@@ -137,7 +137,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-2">
-					<img class="imgcell aboutimagedropshadow" src="assets/img/photos/am18.JPG">
+					<img class="imgcell aboutimagedropshadow" src="assets/img/photos/am20.JPG">
 				</div>
 				<div class="col-md-9">
 					<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
@@ -153,7 +153,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-2">
-			<img class="imgcell aboutimagedropshadow" src="assets/img/photos/am4.JPG">
+			<img class="imgcell aboutimagedropshadow" src="assets/img/photos/am17.JPG">
 		</div>
 		<div class="col-md-9">
 			<p>Allie: <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
