--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   						<li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
   						<li><a href="travel.html" title="Travel">Travel</a></li>
   						<li><a href="registry.html" title="Registry">Registry</a></li>
-  						<li><a href="travelaccomodations.html" title="Accomodations">Things To Do</a></li>
+  						<li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
   						<li><a href="photos.html" title="Schedule">Photos</a></li>
   					</ul>
   				</div><!--/.nav-collapse -->
