first round of copy changes

--- a/travelaccomodations.html
+++ b/travelaccomodations.html
@@ -144,7 +144,7 @@
 				<div class="col-xl-1 col-centered">
 					<h4>Old Post Office Pavilion</h4>
 					<h5>1100 Pennsylvania Ave NW <br />Washington, DC 20004</h5>
-					<h5>Location of the Reception and Farewell Brunch</h5>
+					<h5>Location of the Welcome Party, Reception, and Farewell Brunch</h5>
 				</div>
 			</div>
 			<div class="row">
@@ -156,7 +156,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xl-1 col-centered"> <br />
-					We have a block of rooms reserved at The Old Post Office Pavilion/The Trump Hotel Washington D.C. starting at $350/night (plus tax). Reservations can be accessed via the website button above. Guests can also call 855-878-6700 to make reservations by referencing the Allie Williams and Matt Slocum wedding block. 
+					Reserved at The Old Post Office Pavilion (aka The Trump Hotel DC) is a block of rooms starting at $350/night (plus tax). To make reservations, click the Website button above or call 855-878-6700&#x00a0;and reference the Allie Williams and Matt Slocum wedding block.&#x00a0;<br/>
 				</div><br />
 			</div>
 
@@ -180,9 +180,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xl-1 col-centered"><br />
-					We have a block of rooms reserved at the JW Marriott for $209/night (available Thursday through Sunday). Rates available until October 13, 2017.  The hotel is located 0.3 miles from the Old Post Office Pavilion, where the wedding reception and Sunday brunch will take place and 0.4 mile from St. Patrick’s Church
-					To reserve, please click website button above to access our personalized booking page. Note: If you call the hotel for assistance, please reference the Williams/Slocum Wedding room block.
-
+					Reserved at the JW Marriott is a block of rooms available for $209/night (plus tax) Thursday through Sunday, if you book before 10/13/2017. The hotel is located 0.4 mile from St. Patrick&#x2019;s Church, and 0.3 miles from the Old Post Office Pavilion, where the welcome party, wedding reception, and Sunday brunch will take place. To make reservations, click the Website button above, or call the hotel and reference the Williams/Slocum Wedding room block.<br/>
 				</div><br />
 			</div>
 			<div class="row">
@@ -205,10 +203,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xl-1 col-centered"><br />
-					We have a block of rooms reserved at the Grand Hyatt Washington for $145/night (availalbe Thursday through Sunday). Rates available until October 12, 2017.  The hotel is located 0.4 mile from the Old Post Office Pavilion, where the wedding reception and Sunday brunch will take place and 0.2 mile from St. Patrick’s Church.
-					To reserve, please click the website button above to access our personalized booking page.
-					Note: If you call the hotel for assistance, please reference the Williams/Slocum Wedding room block.
-
+					Reserved at the Grand Hyatt Washington is a block of rooms available for $145/night (plus tax) Thursday through Sunday, if you book before 10/12/17. The hotel is located 0.2 mile from St. Patrick&#x2019;s Church, and 0.4 mile from the Old Post Office Pavilion, where the wedding reception and Sunday brunch will take place. To make reservations, click the Website button above, or call the hotel and reference the Williams/Slocum Wedding room block.<br/>
 				</div><br />
 			</div>
 		</div>
