--- a/wedding.html
+++ b/wedding.html
@@ -21,9 +21,9 @@
 
 	<!-- Custom styles for this template -->
 	<link href="assets/css/main.css" rel="stylesheet">
-	
+
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-	
+
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -44,7 +44,7 @@
 		$('body').smoothScroll({
 			delegateSelector: 'ul.nav a'
 		});
-		
+
 		$('.navbar-collapse a').click(function(){
 			$(".navbar-collapse").collapse('hide');
 		});
@@ -146,10 +146,20 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						We know a lot of you have traveled far to be with us on the big day. If you are in DC Friday night, please swing by Town Hall for a cocktail and to mingle with our other guests. We've rented out the upstairs room for the occasion, starting at 9 p.m. Can't wait to see you there!
-						<br /><br />
-						<b>Attire: Business Casual</b>
+						If you're in DC Friday night and up for some socializing and a beverage, join us in the Jefferson Room at the Old Post Office Pavilion at 8:30 PM.
 					</div><br />
+				</div>
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						Old Post Office Pavilion<br />Jefferson Room <br />1100 Pennslyvania Avenue<br /> Washington, DC<br />
+					</div>
+					<br />
+				</div>
+				<div class="row">
+					<div class="col-xl-1 col-centered">
+						<b>Attire: Business Casual</b>
+					</div>
+					<br />
 				</div>
 			</div>
 			<div class="container-fluid">
@@ -225,14 +235,14 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						We don't want the weekend to end so please join us for brunch<br /><br />Old Post Office Pavilion<br />Jefferson Room<br />1100 Pennslyvania Avenue<br /> Washington, DC
+						We don't want the weekend to end so please join us for brunch<br /><br />Old Post Office Pavilion<br />Lincoln Library<br />1100 Pennslyvania Avenue<br /> Washington, DC
 					</div>
 				</div>
 			</div>
 		</div>
-		
-		
-		
+
+
+
 	</div>
 
     <!-- Bootstrap core JavaScript
