--- a/weddingparty.html
+++ b/weddingparty.html
@@ -281,7 +281,7 @@
 				</div>
 				<div class="col-xs-6 centered photodiv">
 					<a href="#" id="timfmodalbutton" data-toggle="modal" data-target="#timfmodal" title="Tim Frend"><img class="imgcell imagedropshadow" src="assets/img/photos/timf_320x320.jpg"/></a>
-					<h4>Tim Frend</h4><h5>Brother of the Bride</h5>
+					<h4>Tim Frend</h4><h5>Friend & Brother-in-law</h5>
 					<br />
 				</div>
 			</div>
