--- a/registry.html
+++ b/registry.html
@@ -22,9 +22,9 @@
 
 	<!-- Custom styles for this template -->
 	<link href="assets/css/main.css" rel="stylesheet">
-	
+
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-	
+
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -45,7 +45,7 @@
 		$('body').smoothScroll({
 			delegateSelector: 'ul.nav a'
 		});
-		
+
 		$('.navbar-collapse a').click(function(){
 			$(".navbar-collapse").collapse('hide');
 		});
@@ -85,7 +85,7 @@
   						<li><a href="aboutus.html" title="Our Story">About Us</a></li>
   						<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
   						<li><a href="wedding.html" title="Wedding">Schedule</a></li>
-  						<li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
+  						<li><a href="travelaccommodations.html" title="Accommodations">Accommodations</a></li>
   						<li><a href="travel.html" title="Travel">Travel</a></li>
   						<li><a href="registry.html" title="Registry">Registry</a></li>
   						<li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
@@ -95,8 +95,8 @@
   			</div>
   		</nav>
 
-  		
-  		
+
+
   		<section id="registry" name="registry"></section>
   		<div id="sectionwrap" class="top-edge-shadow topsection">
   			<div class="row">
