--- a/travel.html
+++ b/travel.html
@@ -85,7 +85,7 @@
   						<li><a href="aboutus.html" title="Our Story">About Us</a></li>
   						<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
   						<li><a href="wedding.html" title="Wedding">Schedule</a></li>
-  						<li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
+  						<li><a href="travelaccommodations.html" title="Accommodations">Accommodations</a></li>
   						<li><a href="travel.html" title="Travel">Travel</a></li>
   						<li><a href="registry.html" title="Registry">Registry</a></li>
   						<li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
@@ -135,6 +135,32 @@
 		<div class="container-fluid">
 
 			<div class="container-fluid">
+			<div class="row">
+				<div class="col-xl-1 col-centered">
+					<h3>Local Transportation</h3>
+				</div>
+			</div>
+			<hr class="datedivider">
+			<div class="row">
+				<div class="col-xl-1 col-centered">
+					<h4></h4>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-1 col-centered">
+					<a href="https://www.google.com/maps/place/Federal+Triangle/@38.89393,-77.0297251,17z/data=!4m12!1m6!3m5!1s0x89b7b79a1dfd66e9:0xd45a6a779f430162!2sTrump+International+Hotel+Washington,+D.C.!8m2!3d38.8944811!4d-77.0273969!3m4!1s0x89b7b7998b323347:0x4887a558338ffab8!8m2!3d38.8937833!4d-77.0283169" type="button" class="btn btn-calendar">Federal Triangle Metro</a>
+				</div>
+			</div>
+			<br />
+			<div class="row">
+				<div class="col-xl-1 col-centered">
+					If you are not driving in to DC, the metro provides a great option to avoid renting a car.  Federal Triangle Metro is located directly next to the Old Post Office Pavilion.  Uber is also a great option to get around town.
+				</div><br />
+			</div>
+		</div>	
+
+
+			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xl-1 col-centered">
 						<h3>Planes</h3>
@@ -153,7 +179,7 @@
 				</div> <br />
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Reagan is the most convenient airport.  You can easily take a taxi five miles from the Airport to any of the hotels.
+						Reagan is the most convenient airport.  You can easily take a taxi five miles from the Airport to any of the hotels.  You can also take the Metro Yellow line four stops to L'enfant Plaza and transfer to the Blue/Orange/Silver line for two stops until you reach Federal Triangle.
 					</div><br />
 				</div>
 				<div class="row">
@@ -169,7 +195,7 @@
 				<br />
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Dulles is just as convenient as BWI.  It will also require a rental car.  The drive will take approximately 50 minutes depending on traffic.
+						Dulles is about 50 minutes away in good traffic, and will require a rental car or taxi.
 					</div><br />
 				</div>
 				<div class="row">
@@ -185,9 +211,10 @@
 				<br />
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						BWI is also a convenient airport, but will probably require a rental car.  The drive will take approximately 50 minutes depending on traffic.
-					</div><br />
+						BWI is about 50 minutes away in good traffic.  You can take a rental car, taxi, or shuttle to the MARC train to Union Station in DC.  For more information about the MARC train, please  <a href="http://www.bwiairport.com/en/travel/ground-transportation/trans/marc">click here</a>.
+					</div>
 				</div>
+				<br />
 				
 			</div>
 			
@@ -211,7 +238,7 @@
 				<br />
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Train information
+						The Northeast Regional line runs from Boston through New york, Philadelphia, and DC.  Union station is located a short taxi or metro ride away from any of the hotels.
 					</div><br />
 				</div>
 			</div>
@@ -226,30 +253,7 @@
 			</div>
 		</div>
 
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<h3>Metro</h3>
-				</div>
-			</div>
-			<hr class="datedivider">
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<h4>Metro stop</h4>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					<a href="https://www.wmata.com" type="button" class="btn btn-calendar">Map</a>
-				</div>
-			</div>
-			<br />
-			<div class="row">
-				<div class="col-xl-1 col-centered">
-					Train information
-				</div><br />
-			</div>
-		</div>
+		
 	</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
