--- a/travelaccommodations.html
+++ b/travelaccommodations.html
@@ -85,7 +85,7 @@
   						<li><a href="aboutus.html" title="Our Story">About Us</a></li>
   						<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
   						<li><a href="wedding.html" title="Wedding">Schedule</a></li>
-  						<li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
+  						<li><a href="travelaccommodations.html" title="Accommodations">Accommodations</a></li>
   						<li><a href="travel.html" title="Travel">Travel</a></li>
   						<li><a href="registry.html" title="Registry">Registry</a></li>
   						<li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
@@ -127,7 +127,7 @@
 	<div id="sectionwrap" class="top-edge-shadow topsection">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
-				<h1>Accomodations</h1><hr class="whitebackground">
+				<h1>Accommodations</h1><hr class="whitebackground">
 			</div>
 		</div>
 
@@ -205,6 +205,15 @@
 				<div class="col-xl-1 col-centered"><br />
 					Reserved at the Grand Hyatt Washington is a block of rooms available for $145/night (plus tax) Thursday through Sunday, if you book before 10/12/17. The hotel is located 0.2 mile from St. Patrick&#x2019;s Church, and 0.4 mile from the Old Post Office Pavilion, where the wedding reception and Sunday brunch will take place. To make reservations, click the Website button above, or call the hotel and reference the Williams/Slocum Wedding room block.<br/>
 				</div><br />
+			</div>
+		</div>
+
+		<div class="container-fluid fullsection">
+			<div class="row">
+				<div id="mapholder" class="col-lg-12 centered">
+					<iframe id="locationmap" src="untitled.html"></iframe>
+					
+				</div>
 			</div>
 		</div>
 
