--- a/weddingparty.html
+++ b/weddingparty.html
@@ -137,7 +137,7 @@
   						<li><a href="aboutus.html" title="Our Story">About Us</a></li>
   						<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
   						<li><a href="wedding.html" title="Wedding">Schedule</a></li>
-  						<li><a href="travelaccomodations.html" title="Accomodations">Accomodations</a></li>
+  						<li><a href="travelaccommodations.html" title="Accommodations">Accommodations</a></li>
   						<li><a href="travel.html" title="Travel">Travel</a></li>
   						<li><a href="registry.html" title="Registry">Registry</a></li>
   						<li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
