--- a/travelmap.html
+++ b/travelmap.html
@@ -93,10 +93,10 @@
             icon: icons[feature.type].icon,
             label: {
             	text: feature.title,
-            	color: 'blue',
-            	fontSize: '16px',
-            	fontWeight: '8px',
-            	fontFamily: 'Verdana'
+            	color: 'black',
+              fontSize: '16px',
+              fontWeight: '8px',
+              fontFamily: 'Lucida Grande'
             },
             map: map
           });
@@ -106,7 +106,7 @@
           {
             position: new google.maps.LatLng(38.8941658,-77.02740219999998),
             type: 'opop',
-            title: 'Old Post Office Pavilion - Reception and Brunch'
+            title: 'Old Post Office Pavilion'
           }, {
             position: new google.maps.LatLng(38.896306,-77.03159099999999),
             type: 'lodging',
@@ -114,39 +114,11 @@
           }, {
             position: new google.maps.LatLng(38.8995447,-77.0264077),
             type: 'lodging',
-            title: 'Grand Hyatt - Welcome Party'
+            title: 'Grand Hyatt'
           }, {
             position: new google.maps.LatLng(38.8979337,-77.0256493),
             type: 'church',
-            title: 'St. Patrick\' Catholic Church'
-          }, {
-            position: new google.maps.LatLng(38.9058011,-77.04322689999998),
-            type: 'food',
-            title: 'Boqueria'
-          }, {
-            position: new google.maps.LatLng(38.900071,-77.02241989999999),
-            type: 'food',
-            title: 'Matchbox'
-          }, {
-            position: new google.maps.LatLng(38.89796129999999,-77.03333550000002),
-            type: 'food',
-            title: 'Old Ebbitt Grill'
-          }, {
-            position: new google.maps.LatLng(38.8976398,-77.03248529999996),
-            type: 'food',
-            title: 'Hamilton Restaurant'
-          }, {
-            position: new google.maps.LatLng(38.9167735,-77.0308397),
-            type: 'food',
-            title: 'The Fainting Goat'
-          }, {
-            position: new google.maps.LatLng(38.90028540000001,-77.0445269),
-            type: 'food',
-            title: 'Founding Farmers'
-          }, {
-            position: new google.maps.LatLng(38.9138425,-77.04545969999998),
-            type: 'food',
-            title: 'Flippin\' Pizza'
+            title: 'St. Patrick\'s Catholic Church'
           }
         ];
 
