--- a/hotels.html
+++ b/hotels.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Custom Markers</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <style>
+<head>
+  <title>Custom Markers</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta charset="utf-8">
+  <style>
       /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
+      * element that contains the map. */
       #map {
         height: 100%;
       }
@@ -24,11 +24,11 @@
       	position: relative;
       	top: 30px;
       }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
-    <script>
+      </style>
+    </head>
+    <body>
+      <div id="map"></div>
+      <script>
       var myStyles =[
       {
         featureType: "poi",
@@ -93,72 +93,44 @@
             icon: icons[feature.type].icon,
             label: {
             	text: feature.title,
-            	color: 'blue',
+            	color: 'black',
             	fontSize: '16px',
             	fontWeight: '8px',
-            	fontFamily: 'Verdana'
+            	fontFamily: 'Lucida Grande'
             },
             map: map
           });
         }
 
         var features = [
-          {
-            position: new google.maps.LatLng(38.8941658,-77.02740219999998),
-            type: 'opop',
-            title: 'Old Post Office Pavilion - Reception and Brunch'
-          }, {
-            position: new google.maps.LatLng(38.896306,-77.03159099999999),
-            type: 'lodging',
-            title: 'J.W. Marriott'
-          }, {
-            position: new google.maps.LatLng(38.8995447,-77.0264077),
-            type: 'lodging',
-            title: 'Grand Hyatt - Welcome Party'
-          }, {
-            position: new google.maps.LatLng(38.8979337,-77.0256493),
-            type: 'church',
-            title: 'St. Patrick\' Catholic Church'
-          }, {
-            position: new google.maps.LatLng(38.9058011,-77.04322689999998),
-            type: 'food',
-            title: 'Boqueria'
-          }, {
-            position: new google.maps.LatLng(38.900071,-77.02241989999999),
-            type: 'food',
-            title: 'Matchbox'
-          }, {
-            position: new google.maps.LatLng(38.89796129999999,-77.03333550000002),
-            type: 'food',
-            title: 'Old Ebbitt Grill'
-          }, {
-            position: new google.maps.LatLng(38.8976398,-77.03248529999996),
-            type: 'food',
-            title: 'Hamilton Restaurant'
-          }, {
-            position: new google.maps.LatLng(38.9167735,-77.0308397),
-            type: 'food',
-            title: 'The Fainting Goat'
-          }, {
-            position: new google.maps.LatLng(38.90028540000001,-77.0445269),
-            type: 'food',
-            title: 'Founding Farmers'
-          }, {
-            position: new google.maps.LatLng(38.9138425,-77.04545969999998),
-            type: 'food',
-            title: 'Flippin\' Pizza'
-          }
+        {
+          position: new google.maps.LatLng(38.8941658,-77.02740219999998),
+          type: 'opop',
+          title: 'Old Post Office Pavilion'
+        }, {
+          position: new google.maps.LatLng(38.896306,-77.03159099999999),
+          type: 'lodging',
+          title: 'J.W. Marriott'
+        }, {
+          position: new google.maps.LatLng(38.8995447,-77.0264077),
+          type: 'lodging',
+          title: 'Grand Hyatt'
+        }, {
+          position: new google.maps.LatLng(38.8979337,-77.0256493),
+          type: 'church',
+          title: 'St. Patrick\'s Catholic Church'
+        }
         ];
 
         for (var i = 0, feature; feature = features[i]; i++) {
           addMarker(feature);
         }
       }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhUuueIMgK0ThSILNhDcmNq_6HEjexjGE&callback=initMap">
-    </script>
-  </body>
-</html>
+      </script>
+      <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhUuueIMgK0ThSILNhDcmNq_6HEjexjGE&callback=initMap">
+      </script>
+    </body>
+    </html>
 
-Sent from my iPad
+    Sent from my iPad
