--- a/travel.html
+++ b/travel.html
@@ -126,7 +126,7 @@
 	<section id="travel" name="travel"></section>
 	<div id="sectionwrap" class="top-edge-shadow topsection">
 		<div class="row">
-			<div class="col-lg-11 col-lg-offset-1">
+			<div class="col-lg-11">
 				<h1>Travel</h1><hr class="whitebackground">
 			</div>
 		</div>
@@ -154,7 +154,7 @@
 			<br />
 			<div class="row">
 				<div class="col-xl-1 col-centered">
-					If you are not driving in to DC, the metro provides a great option to avoid renting a car.  Federal Triangle Metro is located directly next to the Old Post Office Pavilion.  Uber is also a great option to get around town.
+					Getting around DC without a car should be relatively easy. The Federal Triangle Metro station is right next to the Old Post Office Pavilion. Uber is also a popular local option.
 				</div><br />
 			</div>
 		</div>	
@@ -238,7 +238,7 @@
 				<br />
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						The Northeast Regional line runs from Boston through New york, Philadelphia, and DC.  Union station is located a short taxi or metro ride away from any of the hotels.
+						The Northeast Regional line can bring you from Boston, New York or Philadelphia right to Union Station in downtown DC, and just a short taxi or metro ride away from any of the hotels.
 					</div><br />
 				</div>
 			</div>
@@ -247,7 +247,7 @@
 		<div class="container-fluid fullsection">
 			<div class="row">
 				<div id="mapholder" class="col-lg-12 centered">
-					<iframe id="locationmap" src="untitled.html"></iframe>
+					<iframe id="locationmap" src="travelmap.html"></iframe>
 					
 				</div>
 			</div>
