t # Please enter the commit message for your changes. Lines starting

--- a/registry.html
+++ b/registry.html
@@ -107,7 +107,9 @@
 
   			<div class="container">
   				<div class="row">
+            
   					<div class="centered">
+              <h3>Coming soon...</h3><!--
   						<a href="https://annsandra.com/apps/giftregistry/registry/19688" target=""><img class="registryimg imagedropshadow" src="assets/img/annsandra.png"/></a>
   					</div>
   				</div>
@@ -120,7 +122,7 @@
   				<br />
   				<div class="row">
   					<div class="centered">
-  						<a href="https://secure.potterybarn.com/registry/j7l78dpkm6/registry-list.html"><img class="registryimg imagedropshadow" src="assets/img/potterybarn.jpg"/></a>
+  						<a href="https://secure.potterybarn.com/registry/j7l78dpkm6/registry-list.html"><img class="registryimg imagedropshadow" src="assets/img/potterybarn.jpg"/></a>-->
   					</div>
   				</div>
   				<br />
