update callendar and tbd

--- a/wedding.html
+++ b/wedding.html
@@ -151,7 +151,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Old Post Office Pavilion<br />Jefferson Room <br />1100 Pennslyvania Avenue<br /> Washington, DC<br />
+						Old Post Office Pavilion<br />Roosevelt Room <br />1100 Pennsylvania Avenue<br /> Washington, DC<br />
 					</div>
 					<br />
 				</div>
@@ -211,7 +211,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Old Post Office Pavilion<br />Presidential Ballroom <br />1100 Pennslyvania Avenue<br /> Washington, DC<br /><br /> <b>Attire: Black Tie</b>
+						Old Post Office Pavilion<br />Presidential Ballroom <br />1100 Pennsylvania Avenue<br /> Washington, DC<br /><br /> <b>Attire: Black Tie</b>
 					</div>
 					<br />
 				</div>
@@ -235,7 +235,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						We don't want the weekend to end so please join us for brunch<br /><br />Old Post Office Pavilion<br />Lincoln Library<br />1100 Pennslyvania Avenue<br /> Washington, DC
+						We don't want the weekend to end so please join us for brunch<br /><br />Old Post Office Pavilion<br />Lincoln Library<br />1100 Pennsylvania Avenue<br /> Washington, DC
 					</div>
 				</div>
 			</div>
