--- a/thingstodo.html
+++ b/thingstodo.html
@@ -137,10 +137,10 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						<h3>Food</h3>
+						<h3>Coming Soon...</h3>
 					</div>
 				</div>
-				<hr class="datedivider">
+				<!--<hr class="datedivider">
 				<div class="row">
 					<div class="col-xl-1 col-centered">
 						<h4>Test</h4>
@@ -160,11 +160,11 @@
 					<div class="col-xl-1 col-centered">
 						<h4>Test</h4>
 					</div>
-				</div>
+				</div>-->
 				
 			</div>
 			
-			<div class="container-fluid">
+			<!--<div class="container-fluid">
 				<div class="row">
 					<div class="col-xl-1 col-centered">
 						<h3>Must See</h3>
@@ -187,7 +187,7 @@
 						Train information
 					</div><br />
 				</div>
-			</div>
+			</div>-->
 		</div>
 
 		
