--- a/registry.html
+++ b/registry.html
@@ -100,7 +100,7 @@
   		<section id="registry" name="registry"></section>
   		<div id="sectionwrap" class="top-edge-shadow topsection">
   			<div class="row">
-  				<div class="col-lg-11 col-lg-offset-1">
+  				<div class="col-lg-11">
   					<h1>Registry</h1><hr class="whitebackground">
   				</div>
   			</div>
