--- a/thingstodo.html
+++ b/thingstodo.html
@@ -126,7 +126,7 @@
 	<section id="travel" name="travel"></section>
 	<div id="sectionwrap" class="top-edge-shadow topsection">
 		<div class="row">
-			<div class="col-lg-11 col-lg-offset-1">
+			<div class="col-lg-11">
 				<h1>Things To Do</h1><hr class="whitebackground">
 			</div>
 		</div>
