--- a/registry.html
+++ b/registry.html
@@ -82,14 +82,14 @@
   				</div>
   				<div id="navbar" class="navbar-collapse collapse centered">
   					<ul class="nav navbar-nav centered">
-  						<li><a href="aboutus.html" title="Our Story">About Us</a></li>
-  						<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
-  						<li><a href="wedding.html" title="Wedding">Schedule</a></li>
-  						<li><a href="travelaccommodations.html" title="Accommodations">Accommodations</a></li>
-  						<li><a href="travel.html" title="Travel">Travel</a></li>
-  						<li><a href="registry.html" title="Registry">Registry</a></li>
-  						<li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
-  						<li><a href="photos.html" title="Schedule">Photos</a></li>
+  						<li><a href="aboutus.html" title="Our Story">Our Story</a></li>
+              <li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
+              <li><a href="wedding.html" title="Wedding">Weekend Details</a></li>
+              <li><a href="travelaccommodations.html" title="Accommodations">Accommodations</a></li>
+              <li><a href="travel.html" title="Travel">Travel</a></li>
+              <li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
+              <li><a href="registry.html" title="Registry">Registry</a></li>
+              <li><a href="photos.html" title="Schedule">Photos</a></li>
   					</ul>
   				</div><!--/.nav-collapse -->
   			</div>
