--- a/weddingparty.html
+++ b/weddingparty.html
@@ -134,13 +134,13 @@
   				</div>
   				<div id="navbar" class="navbar-collapse collapse centered">
   					<ul class="nav navbar-nav centered">
-  						<li><a href="aboutus.html" title="Our Story">About Us</a></li>
+  						<li><a href="aboutus.html" title="Our Story">Our Story</a></li>
   						<li><a href="weddingparty.html" title="Wedding Party">Wedding Party</a></li>
-  						<li><a href="wedding.html" title="Wedding">Schedule</a></li>
+  						<li><a href="wedding.html" title="Wedding">Weekend Details</a></li>
   						<li><a href="travelaccommodations.html" title="Accommodations">Accommodations</a></li>
   						<li><a href="travel.html" title="Travel">Travel</a></li>
-  						<li><a href="registry.html" title="Registry">Registry</a></li>
   						<li><a href="thingstodo.html" title="Accomodations">Things To Do</a></li>
+  						<li><a href="registry.html" title="Registry">Registry</a></li>
   						<li><a href="photos.html" title="Schedule">Photos</a></li>
   					</ul>
   				</div><!--/.nav-collapse -->
@@ -185,6 +185,11 @@
 		</div>
 
 		<div class="container fullsection">
+			<div class="row">
+				<div class="col-xs-12 centered">
+						Click a photo to read the story of how they know the Bride and Groom
+				</div><hr class="datedivider">
+			</div>
 			<div class="row">
 				<div class="col-xs-6 centered">
 					<h4>Matron of Honor</h4><hr class="datedivider">
