--- a/thingstodo.html
+++ b/thingstodo.html
@@ -247,7 +247,7 @@
 				<br />
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Homemade portraits and adult milkshakes are just two of the things that make this restaurant a great spot to grab a bite.  With two locations in DC, you can view their menu online.  You can greatly reduce your wait time by dialing your nearest Ted’s a few hours before you plan to arrive and they’ll place you directly on the wait list.
+						Homemade poptarts and adult milkshakes are just two of the things that make this restaurant a great spot to grab a bite.  With two locations in DC, you can view their menu online.  You can greatly reduce your wait time by dialing your nearest Ted’s a few hours before you plan to arrive and they’ll place you directly on the wait list.
 					</div>
 				</div><br />
 
