SEO, new photo, and sitemap

--- a/photos.html
+++ b/photos.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Check out photos of Allie Williams and Matt Slocum here.">
+  <meta name="author" content="Allison Williams">
   <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-  <title>Allie and Matt 11.04.2017</title>
+  <title>Allie Williams and Matt Slocum Photos</title>
 
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
@@ -156,6 +156,7 @@
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 21" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am21.JPG"></a></div>
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 22" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am22.JPG"></a></div>
       <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 23" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am23.JPG"></a></div>
+      <div class="col-lg-3 col-sm-4 col-xs-6"><a title="Image 24" href="#"><img class="thumbnail img-responsive" src="assets/img/photos/am24.JPG"></a></div>
 
     </div>
   </div>
