--- a/registry.html
+++ b/registry.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="Allie Williams and Matt Slocum are registered at Bloomingdale's, Williams and Sonoma, Ann Sandra, and Pottery Barn.">
+  <meta name="author" content="Allison Williams">
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 
-	<title>Allie and Matt 11.04.2017</title>
+	<title>Allie Williams and Matt Slocum Wedding Registry</title>
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
