--- a/weddingparty.html
+++ b/weddingparty.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="">
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 
-	<title>Allie and Matt 11.04.2017</title>
+	<title>Allie Williams and Matt Slocum's Wedding Party</title>
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
