--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Allie Williams and Matt Slocum met in Washington, DC. in March 2013.  Read more about their story here.">
+	<meta name="description" content="Welcome to Allie Williams and Matt Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermat.com.  Read more about their story here.">
 	<meta name="author" content="Allison Williams">
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 
