--- a/registry.html
+++ b/registry.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Allie Williams and Matt Slocum are registered at Bloomingdale's, Williams and Sonoma, Ann Sandra, and Pottery Barn.">
+	<meta name="description" content="Welcome to Allie Williams and Matt Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermat.com.  Allie Williams and Matt Slocum are registered at Bloomingdale's, Williams and Sonoma, Ann Sandra, and Pottery Barn.">
   <meta name="author" content="Allison Williams">
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 
