--- a/thingstodo.html
+++ b/thingstodo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Welcome to Allie Williams and Matt Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermat.com.  Before Allie Williams and Matt Slocum's wedding, there are many things to do in downtown Washington, DC.  Please check out some of our favorite restaurants and places.">
+	<meta name="description" content="Welcome to Allison (Allie) Williams and Matthew (Matt) Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermat.com.  Before Allie Williams and Matt Slocum's wedding, there are many things to do in downtown Washington, DC.  Please check out some of our favorite restaurants and places.">
 	<meta name="author" content="Allison Williams">
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 
@@ -132,7 +132,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xl-1 col-centered">
-				We love that you took time to join us for our wedding in the City of Washington.  You will find some of our favorite places to eat, drink and see throughout the city.
+				We love that you are taking the time to join us for our wedding in the City of Washington.  You will find some of our favorite places to eat, drink and see throughout the city.
 			</div>
 		</div><br />
 
