--- a/travel.html
+++ b/travel.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Welcome to Allie Williams and Matt Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermat.com.  Please check out all of the travel options when considering how to get to Allie Williams and Matt Slocum's wedding">
+	<meta name="description" content="Welcome to Allison (Allie) Williams and Matthew (Matt) Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermat.com.  Please check out all of the travel options when considering how to get to Allie Williams and Matt Slocum's wedding">
 	<meta name="author" content="Allison Williams">
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 
@@ -137,7 +137,7 @@
 			<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-1 col-centered">
-					<h3>Local Transportation</h3>
+					<h3>Metro</h3>
 				</div>
 			</div>
 			<hr class="datedivider">
@@ -148,7 +148,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xl-1 col-centered">
-					<a href="https://www.google.com/maps/place/Federal+Triangle/@38.89393,-77.0297251,17z/data=!4m12!1m6!3m5!1s0x89b7b79a1dfd66e9:0xd45a6a779f430162!2sTrump+International+Hotel+Washington,+D.C.!8m2!3d38.8944811!4d-77.0273969!3m4!1s0x89b7b7998b323347:0x4887a558338ffab8!8m2!3d38.8937833!4d-77.0283169" type="button" class="btn btn-calendar">Federal Triangle Metro</a>
+					<a href="https://www.google.com/maps/place/Federal+Triangle/@38.89393,-77.0297251,17z/data=!4m12!1m6!3m5!1s0x89b7b79a1dfd66e9:0xd45a6a779f430162!2sTrump+International+Hotel+Washington,+D.C.!8m2!3d38.8944811!4d-77.0273969!3m4!1s0x89b7b7998b323347:0x4887a558338ffab8!8m2!3d38.8937833!4d-77.0283169" type="button" class="btn btn-calendar">Federal Triangle Metro</a> <a href="https://www.wmata.com/schedules/maps/upload/system_map_color.pdf" type="button" class="btn btn-calendar">Metro Map</a> 
 				</div>
 			</div>
 			<br />
@@ -163,7 +163,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						<h3>Planes</h3>
+						<h3>By Airplane</h3>
 					</div>
 				</div>
 				<hr class="datedivider">
@@ -221,7 +221,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						<h3>Trains</h3>
+						<h3>By Train</h3>
 					</div>
 				</div>
 				<hr class="datedivider">
@@ -244,14 +244,6 @@
 			</div>
 		</div>
 
-		<div class="container-fluid fullsection">
-			<div class="row">
-				<div id="mapholder" class="col-lg-12 centered">
-					<iframe id="locationmap" src="travelmap.html"></iframe>
-					
-				</div>
-			</div>
-		</div>
 
 		
 	</div>
