typos and adding registry back in

--- a/registry.html
+++ b/registry.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Welcome to Allison (Allie) Williams and Matthew (Matt) Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermat.com.  Allie Williams and Matt Slocum are registered at Bloomingdale's, Williams and Sonoma, Ann Sandra, and Pottery Barn.">
+	<meta name="description" content="Welcome to Allison (Allie) Williams and Matthew (Matt) Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermatt.com.  Allie Williams and Matt Slocum are registered at Bloomingdale's, Williams and Sonoma, Ann Sandra, and Pottery Barn.">
   <meta name="author" content="Allison Williams">
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 
@@ -109,20 +109,9 @@
   				<div class="row">
             
   					<div class="centered">
-              <h3>Coming soon...</h3><!--
-  						<a href="https://annsandra.com/apps/giftregistry/registry/19688" target=""><img class="registryimg imagedropshadow" src="assets/img/annsandra.png"/></a>
-  					</div>
-  				</div>
-  				<br />
-  				<div class="row">
-  					<div class="centered">
-  						<a href="https://secure.williams-sonoma.com/registry/9rx66gbx5x/registry-list.html"><img class="registryimg imagedropshadow" src="assets/img/williamsonoma.png"/></a>
-  					</div>
-  				</div>
-  				<br />
-  				<div class="row">
-  					<div class="centered">
-  						<a href="https://secure.potterybarn.com/registry/j7l78dpkm6/registry-list.html"><img class="registryimg imagedropshadow" src="assets/img/potterybarn.jpg"/></a>-->
+              <h5>Our Wedding Registry is located at zola.com  Please click on the image below to be connected to their website.</h5>
+              <br />
+  						<a href="https://www.zola.com/registry/alliemethermatt"><img style="width:320px;" src="assets/img/zola.png"/></a>
   					</div>
   				</div>
   				<br />
