--- a/travel.html
+++ b/travel.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Welcome to Allison (Allie) Williams and Matthew (Matt) Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermat.com.  Please check out all of the travel options when considering how to get to Allie Williams and Matt Slocum's wedding">
+	<meta name="description" content="Welcome to Allison (Allie) Williams and Matthew (Matt) Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermatt.com.  Please check out all of the travel options when considering how to get to Allie Williams and Matt Slocum's wedding">
 	<meta name="author" content="Allison Williams">
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 
