--- a/wedding.html
+++ b/wedding.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Welcome to Allison (Allie) Williams and Matthew (Matt) Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermat.com.  Allie Williams and Matt Slocum's wedding will take place at St. Patrick's Church in Washington, DC on November 4th, 2017.">
+	<meta name="description" content="Welcome to Allison (Allie) Williams and Matthew (Matt) Slocum's wedding website! View information about the bride and groom, the wedding party, hotels, travel, and registry details at alliemethermatt.com.  Allie Williams and Matt Slocum's wedding will take place at St. Patrick's Church in Washington, DC on November 4th, 2017.">
 	<meta name="author" content="Allison Williams">
 	<link rel="shortcut icon" href="assets/ico/favicon.png">
 
@@ -148,7 +148,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						Old Post Office Pavilion<br />Lincoln Library Room <br />1100 Pennsylvania Avenue<br /> Washington, DC<br />
+						Old Post Office Pavilion<br />Franklin Study<br />1100 Pennsylvania Avenue<br /> Washington, DC<br />
 					</div>
 					<br />
 				</div>
@@ -212,7 +212,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xl-1 col-centered">
-						We don't want the weekend to end, so please join us for brunch.<br /><br />Old Post Office Pavilion<br />Jefferson Room<br />1100 Pennsylvania Avenue<br /> Washington, DC
+						We don't want the weekend to end, so please join us for brunch.<br /><br />Old Post Office Pavilion<br />Lincoln Library<br />1100 Pennsylvania Avenue<br /> Washington, DC
 					</div>
 				</div>
 			</div>
