--- a/registry.html
+++ b/registry.html
@@ -109,9 +109,9 @@
   				<div class="row">
             
   					<div class="centered">
-              <h5>Our Wedding Registry is located at zola.com  Please click on the image below to be connected to their website.</h5>
+              <h5>Our Wedding Registry is located at zola.com.  Please click on the image below to be connected to their website.</h5>
               <br />
-  						<a href="https://www.zola.com/registry/alliemethermatt"><img style="width:320px;" src="assets/img/zola.png"/></a>
+  						<a class="zola-registry-embed" href="https://www.zola.com/registry/alliemethermatt" data-registry-key="alliemethermatt">Our Zola Wedding Registry</a><script>!function(e,t,n){var s,a=e.getElementsByTagName(t)[0];e.getElementById(n)||(s=e.createElement(t),s.id=n,s.async=!0,s.src="https://widget.zola.com/js/widget.js",a.parentNode.insertBefore(s,a))}(document,"script","zola-wjs");</script>
   					</div>
   				</div>
   				<br />
